# rodos

./: CMakeLists.txt  install.md
HelloRodos/: CMakeLists.txt  CMakePresets.json  HelloEoCe.cpp  HelloLinux.cpp
api/: gateway.h  hal.h  rodos.h  rodos_scoped.h
cmake/: install-rules.cmake
cmake/port/: eo_ce.cmake  linux-x86.cmake  peb1_100mhz.cmake  peb1_10mhz.cmake  peb1_20mhz.cmake  peb1_40mhz.cmake  peb1_80mhz.cmake  stm32f4.cmake  stm32l4.cmake  va41620.cmake
cmake/toolchains/: linux-x86.cmake  va41620.cmake
scripts/help-scripts/: install-dependencies.sh
src/bare-metal/stm32f4/hal/: hal_gpio.cpp
src/bare-metal/va41620/startup/: startup.cpp
src/bare-metal/va41620/subtargets/eo_ce/: clkgen_config.h  platform-parameter.h
src/bare-metal/va41620/subtargets/peb1/: clkgen_config.h
support/support-programs/middleware-standalone/api/: gateway.h  hal.h  rodos-middleware.h
